--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ annotated-types==0.7.0
 asgiref==3.8.1
 boto3==1.35.14
 botocore==1.35.14
-Django==5.1.1
+Django==4.2.16
 django-bootstrap-datepicker-plus==5.0.5
 django-storages==1.14.4
 git-filter-repo==2.45.0
@@ -20,4 +20,5 @@ six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.1
-urllib3==2.2.2
+urllib3>=1.25.4,<1.27
+
