--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,26 @@
-version: '3:8'
+version: '3.8'
 
 services:
   app:
-   build: .
-   volumes:
-    - .:/django
-   ports:
-    - 8000:8000
-   image: application:django
-   container_name: app_container
-   command: gunicorn taskly.wsgi:application --bind 0.0.0.0:8000  
+    build: .
+    volumes:
+      - .:/django 
+    ports:
+      - "8000:8000"  
+    image: application:django  
+    container_name: app_container  
+    environment:
+      DJANGO_SETTINGS_MODULE: taskly.settings  
+      DATABASE_NAME: database1
+      DATABASE_USER: admin
+      DATABASE_PASSWORD: admin12345
+      DATABASE_HOST: database1.c5uymeiaajgp.ap-south-1.rds.amazonaws.com
+      DATABASE_PORT: 3306
+    command: gunicorn taskly.wsgi:application --bind 0.0.0.0:8000  
+    networks:
+      - app_network
+
+networks:
+  app_network:
+    driver: bridge
+
