--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - .:/django 
     ports:
       - "8000:8000"  
-    image: application:django  
+    image: seema24/web-app:latest  
     container_name: app_container  
     command: gunicorn taskly.wsgi:application --bind 0.0.0.0:8000
     environment:
