--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,14 @@
-annotated-types==0.7.0
 asgiref==3.8.1
-boto3==1.35.14
-botocore==1.35.14
+distlib==0.3.8
 Django==4.2.16
-django-bootstrap-datepicker-plus==5.0.5
-django-storages==1.14.4
-django-prometheus
-git-filter-repo==2.45.0
-gunicorn==23.0.0
-jmespath==1.0.1
-mysql-connector-python==9.0.0
+django-mssql-backend==2.8.1
+filelock==3.15.4
 mysqlclient==2.2.4
-packaging==24.1
-psycopg2==2.9.9
-pydantic==2.9.0
-pydantic_core==2.23.2
-python-dateutil==2.9.0.post0
-s3transfer==0.10.2
-six==1.16.0
+platformdirs==4.2.2
+pyodbc==5.1.0
 sqlparse==0.5.1
-typing_extensions==4.12.2
 tzdata==2024.1
-urllib3>=1.25.4,<1.27
+virtualenv==20.26.3
+whitenoise==6.7.0
 
 
