--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 distlib==0.3.8
 Django==4.2.16
 django-mssql-backend==2.8.1
+django-prometheus
 filelock==3.15.4
 mysqlclient==2.2.4
 platformdirs==4.2.2
@@ -10,5 +11,5 @@ sqlparse==0.5.1
 tzdata==2024.1
 virtualenv==20.26.3
 whitenoise==6.7.0
-
+django-prometheus
 
