--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ distlib==0.3.8
 Django==4.2.16
 django-mssql-backend==2.8.1
 django-prometheus
+gunicorn>=23.0.0
 filelock==3.15.4
 mysqlclient==2.2.4
 platformdirs==4.2.2
