--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ asgiref==3.8.1
 distlib==0.3.8
 Django==4.2.16
 django-mssql-backend==2.8.1
-django-prometheus
+django-prometheus=2.1.0
+prometheus-client=0.9.0
 gunicorn>=23.0.0
 filelock==3.15.4
 mysqlclient==2.2.4
 platformdirs==4.2.2
 pyodbc==5.1.0
+pytz==2021.1
 sqlparse==0.5.1
 tzdata==2024.1
 virtualenv==20.26.3
