--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ asgiref==3.8.1
 distlib==0.3.8
 Django==4.2.16
 django-mssql-backend==2.8.1
-django-prometheus=2.1.0
-prometheus-client=0.9.0
+django-prometheus==2.1.0
+prometheus-client==0.9.0
 gunicorn>=23.0.0
 filelock==3.15.4
 mysqlclient==2.2.4
