--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,5 +6,5 @@ scrape_configs:
     metrics_path: /metrics  
     static_configs:
       - targets: 
-        - 65.2.4.202:8000  # Specify the port Prometheus should scrape
+        - app_container:8000  # Specify the port Prometheus should scrape
          
