--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,10 +1,9 @@
 global:
-  scrape_interval: 15s  # How often Prometheus will scrape targets
+  scrape_interval: 15s
+  evaliation_interval: 15s
 
 scrape_configs:
   - job_name: 'monitoring'
-    metrics_path: /metrics  
+    metrics_path: '/metrics'  
     static_configs:
-      - targets: 
-        - app_container:8000  # Specify the port Prometheus should scrape
-         
+      - targets: ['app_container:8000']
