--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     command: gunicorn taskly.wsgi:application --bind 0.0.0.0:8000
     environment:
       - DJANGO_SETTINGS_MODULE=taskly.settings
-    user: root
+    user: appuser
 
   prometheus:
     image: prom/prometheus:latest
